Collaboration: Fix overflowing element

--- a/client/ide/styl/ide.chat.styl
+++ b/client/ide/styl/ide.chat.styl
@@ -99,7 +99,6 @@ pmLinkColor   = #B6B6B6
         padding             12px 0
 
       .kdbutton
-        size                293px 34px
         &[disabled]
           bg                color #D0D0D0
 
@@ -315,6 +314,10 @@ pmLinkColor   = #B6B6B6
       .label
         color               #6a6a6a
         font-size           13px
+
+  header.chat-settings
+    button
+      size                  293px 34px
 
 
 .ide
